--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -17,3 +17,6 @@ $custom-spacers: (
     7: $spacer * 10,
 );
 $spacers: map-merge($spacers, $custom-spacers);
+
+// fix offcanvas z-index
+$zindex-offcanvas: 1052;
